@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/field[@name='lines']" position="after">
+        <label name="post_leftovers"/>
+        <field name="post_leftovers"/>
         <notebook>
             <page name="lines">
                 <field name="lines"/>
