@@ -1,3 +1,4 @@
+* Allow to automatically post reconciliation moves
 * Launch reconciliation wizard from party
 * Allow to auto post move templates
 
